--- a/index.html
+++ b/index.html
@@ -75,5 +75,9 @@ S |  EEEEEEEE  | MMMMMMMMMMM
     <h2>Conclusion</h2>
     <p>BF20 offers a pragmatic middle-ground between BF16 and FP32. With minor hardware changes and software support, BF20 can save power, reduce memory footprint, and increase parallel throughput without compromising on quality where BF16 would fall short. This makes it an ideal candidate for adoption in both general-purpose and domain-specific processors, especially for graphics, AI, and edge computing workloads.</p>
   </div>
+
+  <a href="BF20_Specification.pdf" download style="display:inline-block; padding:10px 20px; background:#2c3e50; color:white; border-radius:6px; text-decoration:none;">
+  📄 Download BF20 Specification (PDF)
+  </a>
 </body>
 </html>
