--- a/index.html
+++ b/index.html
@@ -18,6 +18,10 @@
 <body>
   <h1>BF20 Floating Point Format Specification</h1>
 
+  <a href="BF20_Specification.pdf" download style="display:inline-block; padding:10px 20px; background:#2c3e50; color:white; border-radius:6px; text-decoration:none;">
+  📄 Download BF20 Specification (PDF)
+  </a>
+  
   <div class="section">
     <h2>Overview</h2>
     <p><strong>BF20</strong> (Brain Float 20-bit) is a proposed floating point format designed to strike a balance between the compactness of BF16 and the precision of FP32. It uses 20 bits to represent a number, allowing for efficient memory use while preserving sufficient dynamic range and precision for many AI, graphics, signal processing, and embedded workloads.</p>
